# USPrediction

./: .gitignore  .gitmodules  README.md  requierments.txt
XMem/: README.md  run_xmem.slurm
XMem/inference/data/: test_datasets.py
XMem/logs/: xmem_323738.err  xmem_323738.out
code/: README.md  pyproject.toml
code/models/unet/: create_comparison_video.py  dataset.py  infer.py  infer_video.py  loader.py  main.py  train.py
code/models/unet/configs/: config.json
code/models/unet/experiments/: analyze_experiments.py
code/models/unet/experiments/1/: config.json  output.txt
code/models/unet/experiments/1-no-weights/: config.json  output.txt
code/models/unet/experiments/2/: config.json  output.txt
code/models/unet/experiments/2-no-weights/: config.json
code/models/unet/experiments/3/: config.json  output.txt
code/models/unet/experiments/3-no-weights/: config.json
code/models/unet/experiments/4/: output.txt
code/models/unet/experiments/4-no-weights/: config.json
code/models/unet/experiments/5/: config.json  output.txt
code/models/unet/experiments/5-no-weights/: config.json
code/models/unet/experiments/6/: output.txt
code/models/unet/experiments/7/: config.json  output.txt
code/models/unet/experiments/8/: config.json  output.txt
code/models/unet/experiments/9/: config.json  output.txt
code/models/unet/experiments/leave_one_out/: leave_one_out_experiment.py  visualize_leave_one_out.py
code/utils/: augmentations.py  image_utils.py  prepare_data.py  video_utils.py
logs/: infer_unet.err  infer_video_unet.err  train_unet.err
